--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "deploy:build": "npm run docs:build && deploy.sh"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,9 @@
   },
   "homepage": "https://github.com/Relieved-hai/notebook#readme",
   "devDependencies": {
-    "vuepress": "^1.0.1"
+    "vuepress": "^1.0.1",
+    "element-ui": "^2.9.2",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0"
   }
 }
