--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "homepage": "https://github.com/Relieved-hai/notebook#readme",
   "devDependencies": {
-    "vuepress": "^1.0.1",
     "element-ui": "^2.9.2",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vuepress": "^1.0.1"
   },
   "dependencies": {
     "vuepress-plugin-nprogress": "^1.1.1"
